--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
+    "express-sslify": "^1.2.0",
     "knex": "^2.4.2",
     "pg": "^8.11.1"
   },
